--- a/VsCode/JSP-Servlets/Session/.project
+++ b/VsCode/JSP-Servlets/Session/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EnviaYRecibe</name>
+	<name>Session</name>
 	<comment></comment>
 	<projects>
 	</projects>
